<resources>
    <string name="app_name">CallBoard</string>
    <string name="ad_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ad_inter_id">ca-app-pub-3940256099942544/1033173712</string>
    <!-- выдвигающееся меню Drawer main -->
    <string name="ad_cat1">Объявления</string>
    <string name="ad_my_ads">Мои объявления</string>
    <string name="def">Разное</string>
    <string name="ad_car">Автомобили</string>
    <string name="ad_pc">Компьютеры</string>
    <string name="ad_smartphone">Смартфоны</string>
    <string name="ad_dm">Бытовая техника</string>

    <string name="ad_cat2">Аккаунт</string>
    <string name="ac_sign_up">Регистрация</string> <!-- регистрация -->
    <string name="ac_sign_in">Вход</string> <!-- вход -->
    <string name="ac_sign_out">Выход</string> <!-- выход -->

    <string name="open">Open</string> <!-- открыть -->
    <string name="close">Close</string> <!-- закрыть -->
    <string name="not_reg">Войдите или зарегистрируйтесь!</string> <!-- закрыть -->

    <!-- Sign Dialog -->
    <string name="email_hint">Email</string> <!-- хинт -->
    <string name="email_reset_password_was_sent">Ссылка для восстановления отправлена на почту!</string> <!-- для восстановления пароля -->
    <string name="dialog_reset_email_message">Для восстановления пароля укажите ваш Email адрес!</string> <!-- для восстановления пароля -->
    <string name="password_hint">Password</string> <!-- хинт -->
    <string name="sign_up_action">Зарегистрироваться</string> <!-- Зарегистрироваться -->
    <string name="sign_in_action">Войти</string> <!-- Войти -->
    <string name="forget_password">Забыли пароль?</string> <!-- Войти -->
    <string name="sign_up_error">Неудалось зарегистрироваться</string> <!-- Ошибка регистрация -->
    <string name="sign_in_error">Неудалось войти</string> <!-- Ошибка входа -->
    <string name="send_verification_error">Неудалось отправить Email для подтверждения</string> <!-- Ошибка отправки почты -->
    <string name="send_verification_done">На вашу почту была отправлена ссылка для подтверждения вашего аккаунта, пожалуйста подтвердите ваш аккаунт!</string> <!-- Ошибка отправки почты -->
    <!-- Toast -->
    <string name="link_done">Email успешно подключен к Google аккаунту</string>
    <string name="enter_to_G">У вас уже есть аккаунт с такой почтой, войдите в Гугл аккаунт, а после зарегистрируйтесь по почте, и они свяжутся.</string>
    <!-- Edit Activity -->
    <string name="select_country">*Выберите страну</string>
    <string name="select_city">*Выберите город</string>
    <string name="country">Страна</string>
    <string name="city">Город</string>
    <string name="index">*Индекс</string>
    <string name="tel">Телефон</string>
    <string name="tel_number">*Номер телефона</string>
    <string name="category">Категория</string>
    <string name="title">Заголовок</string>
    <string name="title_hint">*Название объявления</string>
    <string name="select_category">*Выберите категорию</string>
    <string name="price">Цена</string>
    <string name="price_hint">*Укажите цену</string>
    <string name="description">Описание</string>
    <string name="description_hint">*Описание</string>
    <string name="with_send">С отправкой</string>
    <string name="send">Отправка</string>
    <string name="publish">Опубликовать</string>
    <!-- Ad List Item -->
    <string name="price_desc">Цена:</string>

</resources>